2007-07-30  Adele Peterson  <adele@apple.com>

        Reviewed by Darin.

        Fix for <rdar://problem/5274937> Safari 3 breaks Missing Sync's WebKit code by crashing

        * loader/MainResourceLoader.cpp: (WebCore::MainResourceLoader::continueAfterContentPolicy): Nil check for the FrameLoader.

2007-07-30  Anders Carlsson  <andersca@apple.com>

        Reviewed by Darin.

        <rdar://problem/5370710> 
        REGRESSION: After switching from Bookmark view, the Find Banner won't appear while displaying a PDF file

        Add a hasHTMLView to FrameLoaderClient. This is only useful for clients who can show different views for different
        MIME types and URL schemes.
        
        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::transitionToCommitted):
        Call delegate methods here if the current view is not a HTML view.
        
        * loader/FrameLoaderClient.h:
        (WebCore::FrameLoaderClient::hasHTMLView):

2007-07-30  Sam Weinig  <sam@webkit.org>

        Reviewed by Maciej.

        Fix for <rdar://problem/5363896>
        REGRESSION: Setting document.domain does not override port-based cross-frame security checks -- breaks SAP NetWeaver

        Updates the results for:
            http/tests/security/cross-frame-access-port-explicit-domain.html
            http/tests/security/cross-frame-access-protocol-explicit-domain.html

        * bindings/js/kjs_window.cpp:
        (KJS::createWindow): Use the new setDomainInternal method.
        (KJS::Window::isSafeScript): Don't set check the port or protocol 
        if both documents have explicitly set document.domain in the DOM
        and the those domains are equal.
        * dom/Document.cpp:
        (WebCore::Document::Document):
        (WebCore::Document::setDomain): Remove force parameter and change 
        all calls that relied on it use the new setDomainInternal method
        which does the same thing.
        (WebCore::Document::setDomainInternal): 